refactor: change paths names

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runduk</title>
-    <link rel="stylesheet" href="/runduk/style.css">
+    <link rel="stylesheet" href="/runduk/">
     <link rel="icon" href="/runduk/images/jug_icon.png">
 </head>
 <body>
