--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runduk</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="icon" href="/images/jug_icon.png">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/jug_icon.png">
 </head>
 <body>
     <div class="wrapper">
@@ -19,10 +19,10 @@
             <div class="counter">
                 <div class="runRune-bg"></div>
                 <div class="img-wrap runRune" data-text="0">
-                    <img src="/images/rune.png" alt="" class="img">
+                    <img src="images/rune.png" alt="" class="img">
                 </div>
                 <div class="img-wrap runduk">
-                    <img src="/images/chest.svg" alt="" class="img">
+                    <img src="images/chest.svg" alt="" class="img">
                 </div>
             </div>
         </div>
@@ -35,10 +35,10 @@
         </div>
         <div class="grid">
             <div class="img-wrap rune">
-                <img class="img" src="/images/output-onlineimagetools.png" alt="">
+                <img class="img" src="images/output-onlineimagetools.png" alt="">
             </div>
             <div class="img-wrap jug">
-                <img class="img" src="/images/juggernaut.png" alt="">
+                <img class="img" src="images/juggernaut.png" alt="">
             </div>
             <div class="grid__cell"></div>
             <div class="grid__cell"></div>
@@ -91,17 +91,17 @@
         </div>
     </div>
     <div class="sounds">
-        <audio src="/sounds/runduk.mpeg" class="sound"></audio>
-        <audio src="/sounds/pickup.mpeg" class="sound"></audio>
-        <audio src="/sounds/pickup_step.mpeg" class="sound"></audio>
-        <audio src="/sounds/footstep_1.mpeg" class="steps"></audio>
-        <audio src="/sounds/footstep_2.mpeg" class="steps"></audio>
-        <audio src="/sounds/footstep_3.mpeg" class="steps"></audio>
-        <audio src="/sounds/footstep_4.mpeg" class="steps"></audio>
-        <audio src="/sounds/footstep_5.mpeg" class="steps"></audio>
-        <audio src="/sounds/footstep_6.mpeg" class="steps"></audio>
-        <audio src="/sounds/footstep_7.mpeg" class="steps"></audio>
+        <audio src="sounds/runduk.mpeg" class="sound"></audio>
+        <audio src="sounds/pickup.mpeg" class="sound"></audio>
+        <audio src="sounds/pickup_step.mpeg" class="sound"></audio>
+        <audio src="sounds/footstep_1.mpeg" class="steps"></audio>
+        <audio src="sounds/footstep_2.mpeg" class="steps"></audio>
+        <audio src="sounds/footstep_3.mpeg" class="steps"></audio>
+        <audio src="sounds/footstep_4.mpeg" class="steps"></audio>
+        <audio src="sounds/footstep_5.mpeg" class="steps"></audio>
+        <audio src="sounds/footstep_6.mpeg" class="steps"></audio>
+        <audio src="sounds/footstep_7.mpeg" class="steps"></audio>
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
