--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img class="img" src="images/output-onlineimagetools.png" alt="">
             </div>
             <div class="img-wrap jug">
-                <img class="img" src="images/juggernaut.png" alt="">
+                <img class="img" src="images/hero_sprites/juggernaut.png" alt="">
             </div>
             <div class="grid__cell"></div>
             <div class="grid__cell"></div>
